--- a/payloads/Makefile
+++ b/payloads/Makefile
@@ -3,7 +3,7 @@ PPU_OBJCOPY = ppu-objcopy
 
 TARGET		:=	$(notdir $(CURDIR))
 PAYLOADS := 355 355dex 421 421dex 430 430dex 431 440
-SPECIALPAYLOADS:= psx_storage ps3_storage
+SPECIALPAYLOADS:= psx_storage ps3_storage ps3_controlfan
 
 all: CFW341 $(SPECIALPAYLOADS) $(PAYLOADS)
 
