--- a/payloads/Makefile
+++ b/payloads/Makefile
@@ -3,7 +3,7 @@ PPU_OBJCOPY = ppu-objcopy
 
 TARGET		:=	$(notdir $(CURDIR))
 PAYLOADS := 355 355dex 421 421dex 430 430dex 431 440 441 446 450 450dex 453 455 460 460dex 460deh 465 465dex 466 470 470dex 475 475dex 476
-SPECIALPAYLOADS:= psx_storage ps3_storage ps3_controlfan
+SPECIALPAYLOADS:= psx_storage ps3_storage ps3_controlfan payload_sm
 
 all: CFW341 $(SPECIALPAYLOADS) $(PAYLOADS)
 
